修复编译警告(wcf配置文件错误)

--- a/CSharp/Server/Realm/App.config
+++ b/CSharp/Server/Realm/App.config
@@ -10,20 +10,19 @@
 	<!-- 部署服务库项目时，必须将配置文件的内容添加到主机的 app.config 文件中。System.Configuration 不支持库的配置文件。-->
 	<system.serviceModel>
 		<services>
-			<service name="Realm.ICalculator">
-				<endpoint address="" binding="basicHttpBinding" contract="Realm.IService1">
-					<identity>
-						<dns value="localhost" />
-					</identity>
-				</endpoint>
-				<endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
-				<host>
-					<baseAddresses>
-						<add baseAddress="http://localhost:8733/Design_Time_Addresses/Realm/Calculator/" />
-					</baseAddresses>
-				</host>
-			</service>
-		</services>
+      <service name="Realm.Calculator">
+          <endpoint address="" binding="basicHttpBinding" contract="RealmContract.ICalculator">
+              <identity>
+                  <dns value="localhost" />
+              </identity>
+          </endpoint>
+          <host>
+              <baseAddresses>
+                  <add baseAddress="http://localhost:8733/Design_Time_Addresses/Realm/Calculator/" />
+              </baseAddresses>
+          </host>
+      </service>
+  </services>
 		<behaviors>
 			<serviceBehaviors>
 				<behavior>
