--- a/CSharp/App/Editor/app.config
+++ b/CSharp/App/Editor/app.config
@@ -18,7 +18,7 @@
   <appSettings>
     <add key="IP" value="192.168.11.95" />
     <add key="Port" value="8888" />
-	<add key="Account" value="test01@163.com" />
-	<add key="Password" value="111111" />
+	<add key="Account" value="egametang@163.com" />
+	<add key="Password" value="163bio1" />
   </appSettings>
 </configuration>
