net.tcp wcf调用成功

--- a/CSharp/App/Editor/app.config
+++ b/CSharp/App/Editor/app.config
@@ -21,4 +21,19 @@
 		<add key="Account" value="egametang@163.com" />
 		<add key="Password" value="163bio1" />
 	</appSettings>
+
+
+	<system.serviceModel>
+		<bindings>
+			<netTcpBinding>
+				<binding name="NetTcpBinding_Calculator" />
+			</netTcpBinding>
+		</bindings>
+		<client>
+			<endpoint address="net.tcp://localhost:10000/Calculator/" binding="netTcpBinding"
+                bindingConfiguration="NetTcpBinding_Calculator" contract="Realm.Calculator"
+                name="NetTcpBinding_Calculator">
+			</endpoint>
+		</client>
+	</system.serviceModel>
 </configuration>
