--- a/CSharp/Server/Realm/App.config
+++ b/CSharp/Server/Realm/App.config
@@ -1,38 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-
-	<appSettings>
-		<add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
-	</appSettings>
-	<system.web>
-		<compilation debug="true" />
-	</system.web>
-	<!-- 部署服务库项目时，必须将配置文件的内容添加到主机的 app.config 文件中。System.Configuration 不支持库的配置文件。-->
 	<system.serviceModel>
 		<services>
-      <service name="Realm.Calculator">
-          <endpoint address="" binding="basicHttpBinding" contract="RealmContract.ICalculator">
-              <identity>
-                  <dns value="localhost" />
-              </identity>
-          </endpoint>
-          <host>
-              <baseAddresses>
-                  <add baseAddress="http://localhost:8733/Design_Time_Addresses/Realm/Calculator/" />
-              </baseAddresses>
-          </host>
-      </service>
-  </services>
+			<service name="Realm.Calculator" behaviorConfiguration="Realm.BehaviorConfiguration">
+				<endpoint address="" binding="netTcpBinding" contract="RealmContract.ICalculator" />
+				<endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange" />
+				<host>
+					<baseAddresses>
+						<add baseAddress="net.tcp://localhost:10000/Calculator/" />
+					</baseAddresses>
+				</host>
+			</service>
+		</services>
+
 		<behaviors>
 			<serviceBehaviors>
-				<behavior>
-					<!-- 为避免泄漏元数据信息，请在部署前将以下值设置为 false -->
-					<serviceMetadata httpGetEnabled="True" httpsGetEnabled="True"/>
-					<!-- 要接收故障异常详细信息以进行调试，请将以下值设置为true。在部署前设置为false以避免泄漏异常信息-->
+				<behavior name="Realm.BehaviorConfiguration">
+					<serviceMetadata httpGetEnabled="False" />
 					<serviceDebug includeExceptionDetailInFaults="False" />
+					<dataContractSerializer maxItemsInObjectGraph="2147483647" />
 				</behavior>
 			</serviceBehaviors>
 		</behaviors>
 	</system.serviceModel>
-
 </configuration>
