建立WCF Client库,需要连接server直接引用client库即可

--- a/CSharp/App/Editor/app.config
+++ b/CSharp/App/Editor/app.config
@@ -31,7 +31,7 @@
 		</bindings>
 		<client>
 			<endpoint address="net.tcp://localhost:10000/Calculator/" binding="netTcpBinding"
-                bindingConfiguration="NetTcpBinding_Calculator" contract="Realm.Calculator"
+                bindingConfiguration="NetTcpBinding_Calculator" contract="Proxy.Calculator"
                 name="NetTcpBinding_Calculator">
 			</endpoint>
 		</client>
