--- a/CSharp/App/Modules/WCFClient/WCFClient.csproj
+++ b/CSharp/App/Modules/WCFClient/WCFClient.csproj
@@ -70,11 +70,6 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Service References\Realm\Reference.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </Compile>
     <Compile Include="WCFClientViewModel.cs" />
     <Page Include="WCFClientView.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -93,18 +88,11 @@
     <None Include="App.config" />
     <None Include="Packages.config" />
     <AppDesigner Include="Properties\" />
-    <None Include="Service References\Realm\service.wsdl" />
-    <None Include="Service References\Realm\service.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Service References\Realm\service1.xsd">
-      <SubType>Designer</SubType>
-    </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Contract\RealmContract\RealmContract.csproj">
-      <Project>{E62B0633-1767-44A0-9479-C8E9D19DA4B8}</Project>
-      <Name>RealmContract</Name>
+    <ProjectReference Include="..\..\..\Client\RealmClient\RealmClient.csproj">
+      <Project>{3ef3ae01-5ef3-4c5c-ab49-87bb9d06c007}</Project>
+      <Name>RealmClient</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\Platform\Log\Log.csproj">
       <Project>{72e16572-fc1f-4a9e-bc96-035417239298}</Project>
@@ -114,24 +102,6 @@
       <Project>{48A2E149-0DAC-41B4-BB54-DFBCCD6D42B3}</Project>
       <Name>Infrastructure</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Service References\" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadataStorage Include="Service References\Realm\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Service References\Realm\configuration91.svcinfo" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Service References\Realm\configuration.svcinfo" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Service References\Realm\Reference.svcmap">
-      <Generator>WCF Proxy Generator</Generator>
-      <LastGenOutput>Reference.cs</LastGenOutput>
-    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
