windows下编译通过,删除game模块,game模块应该用脚本层实现,去除threadpool

--- a/Cpp/CMakeLists.txt
+++ b/Cpp/CMakeLists.txt
@@ -29,19 +29,18 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/ThirdParty)
 FIND_PACKAGE(Protobuf REQUIRED)
 INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIRS})
 
-FIND_PACKAGE(Perftools REQUIRED)
-INCLUDE_DIRECTORIES(${PERFTOOLS_INCLUDE_DIRS})
-
 FIND_PACKAGE(MysqlConnector)
 INCLUDE_DIRECTORIES(${MYSQL_CONNECTOR_INCLUDE_DIRS})
 
+FIND_PACKAGE(Perftools REQUIRED)
+
 FIND_PACKAGE(Mono)
 
-FIND_PACKAGE(Boost COMPONENTS log)
-FIND_PACKAGE(Boost REQUIRED thread system filesystem)
 SET(Boost_USE_STATIC_LIBS    ON)
 SET(Boost_USE_MULTITHREADED  ON)
-SET(Boost_USE_STATIC_RUNTIME OFF)
+SET(Boost_USE_STATIC_RUNTIME ON)
+FIND_PACKAGE(Boost REQUIRED thread system filesystem log)
+
 
 # 设置第三方库
 SET(ThirdPartyLibs
@@ -57,27 +56,32 @@ ENDIF()
 
 IF(TCMALLOC)
 	SET(ThirdPartyLibs ${ThirdPartyLibs} ${PERFTOOLS_DEBUG_LIBRARIES})
+	INCLUDE_DIRECTORIES(${PERFTOOLS_INCLUDE_DIRS})
 ENDIF()
 
 IF(PROFILE)
 	SET(ThirdPartyLibs ${ThirdPartyLibs} ${PERFTOOLS_PROFILE_LIBRARIES})
+	INCLUDE_DIRECTORIES(${PERFTOOLS_INCLUDE_DIRS})
 ENDIF()
 
 # 设置编译选项
 IF(WIN32)
-	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MTd /Zi /WX /wd4244 /wd4267 /wd4018 /wd4355 /wd4800 /wd4251 /wd4996 /wd4146 /wd4305 /wd4819")
+	SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
+	SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
+	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zi /WX /wd4244 /wd4267 /wd4018 /wd4355 /wd4800 /wd4251 /wd4996 /wd4146 /wd4305 /wd4819")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:libc.lib")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:libcmt.lib")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:msvcrt.lib")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:libcd.lib")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:msvcrtd.lib")
 	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:msvcprtd.lib")
-	ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB -D_WIN32_WINNT=0x0601 -DGLOG_NO_ABBREVIATED_SEVERITIES -DGOOGLE_GLOG_DLL_DECL= -DGFLAGS_DLL_DECL= -DGFLAGS_DLL_DECLARE_FLAG= -DGFLAGS_DLL_DEFINE_FLAG=)
+	ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB -D_WIN32_WINNT=0x0601)
+	# gtest gmock 用到std::tuple超过了默认最大模板参数
+	ADD_DEFINITIONS(-D_VARIADIC_MAX=10)
 ELSEIF(UNIX)
 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 ENDIF()
 
 # 子目录
 ADD_SUBDIRECTORY(Platform)
-ADD_SUBDIRECTORY(Game)
 ADD_SUBDIRECTORY(ThirdParty)
