--- a/CSharp/Platform/Helper/Packages.config
+++ b/CSharp/Platform/Helper/Packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="mongocsharpdriver" version="1.8.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
   <package id="protobuf-net" version="2.0.0.640" targetFramework="net45" />
 </packages>
