--- a/CSharp/Game/BehaviorTreeTest/BehaviorTreeTest.csproj
+++ b/CSharp/Game/BehaviorTreeTest/BehaviorTreeTest.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="ConfigTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="BehaviorTreeFactoryTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Platform\Helper\Helper.csproj">
@@ -61,6 +62,10 @@
     <ProjectReference Include="..\BehaviorTree\BehaviorTree.csproj">
       <Project>{c4e7a34a-095c-4983-ab63-fc2d20cd6824}</Project>
       <Name>BehaviorTree %28Game\BehaviorTree%29</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Component\Component.csproj">
+      <Project>{CBEDBE33-A883-4BFA-AE0A-8B3573F09BD0}</Project>
+      <Name>Component</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
