--- a/CSharp/Game/ComponentTest/ComponentTest.csproj
+++ b/CSharp/Game/ComponentTest/ComponentTest.csproj
@@ -60,6 +60,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="BuffManagerTest.cs" />
     <Compile Include="ObjectTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
