1.ENetException改成EException 2.Game模块增加Config管理类，用来管理Game的配置

--- a/CSharp/Platform/ENet/ENet.csproj
+++ b/CSharp/Platform/ENet/ENet.csproj
@@ -38,7 +38,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Address.cs" />
-    <Compile Include="ENetException.cs" />
+    <Compile Include="EException.cs" />
     <Compile Include="Event.cs" />
     <Compile Include="IOService.cs" />
     <Compile Include="Library.cs" />
